--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                     </ul>
                 </div>
                 <div class="nav__actions">
-                    <button type="button" class="btn nav__btn btn_square me-2">
+                    <button type="button" class="btn nav__btn btn__square me-2">
                         <i class="fa-regular fa-user"></i>
                     </button>
                     <button type="button" class="btn nav__btn">
                         <i class="fa-regular fa-cart-shopping me-1"></i> 30
                     </button>
                 </div>
-                <!-- <button type="button" class="btn nav__btn btn_square">
+                <!-- <button type="button" class="btn nav__btn btn__square">
                 <i class="fa-regular fa-arrow-right-from-bracket"></i>
             </button> -->
             </div>
@@ -134,8 +134,10 @@
                                         verified by
                                         Microsoft as compatible with the Azure Active Directory passwordless experience.
                                     </p>
-                                    <a href="#" class="hero_card_link">See all products <i
-                                            class="fa-regular fa-right-long ms-1"></i></a>
+                                    <a href="#" class="hero_card_link">
+                                        See all products
+                                        <i class="fa-regular fa-right-long ms-1"></i>
+                                    </a>
                                     <a href="" class="btn hero_card_btn">
                                         <i class="fa-solid fa-arrow-right"></i>
                                     </a>
@@ -185,27 +187,310 @@
     </header>
 
     <main class="main">
-        <div class="container">
-            <div class="main_section_header">
-                <h3 class="main__title">Best-selling</h3>
-                <a href="#" class="main_see_all">See all</a>
-            </div>
-        </div>
         <section class="best__selling">
-            <div class="splide" role="group">
-                <div class="splide__track">
-                    <ul class="splide__list">
-                        <li class="splide__slide">Slide 01</li>
-                        <li class="splide__slide">Slide 02</li>
-                        <li class="splide__slide">Slide 03</li>
-                    </ul>
+            <div class="container">
+                <div class="main_section_header">
+                    <h3 class="main__title">Best-selling</h3>
+                    <a href="#" class="main_see_all">See all</a>
                 </div>
+                <div class="splide products__slider" role="group">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide">
+                                <div class="card">
+                                    <img src="img/products/card-product1.png" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <a href="#">
+                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
+                                        </a>
+                                        <p class="card__text">A keychain attachable programmable token. Drop-in
+                                            replacement
+                                            for Authenticator...</p>
+                                        <a href="#" class="card__order">
+                                            Order
+                                            <i class="fa-regular fa-right-long ms-2"></i>
+                                        </a>
+                                        <div class="card__price">
+                                            <p class="card_product_price">€12.</p>
+                                            <span class="card_price_point">00</span>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn__square card__btn">
+                                        <i class="fa-regular fa-cart-shopping me-1"></i>
+                                    </button>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="card">
+                                    <img src="img/products/card-product2.png" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <a href="#">
+                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
+                                        </a>
+                                        <p class="card__text">A keychain attachable programmable token. Drop-in
+                                            replacement
+                                            for Authenticator...</p>
+                                        <a href="#" class="card__order">
+                                            Order
+                                            <i class="fa-regular fa-right-long ms-2"></i>
+                                        </a>
+                                        <div class="card__price">
+                                            <p class="card_product_price">€12.</p>
+                                            <span class="card_price_point">00</span>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn__square card__btn">
+                                        <i class="fa-regular fa-cart-shopping me-1"></i>
+                                    </button>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="card">
+                                    <img src="img/products/card-product3.png" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <a href="#">
+                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
+                                        </a>
+                                        <p class="card__text">A keychain attachable programmable token. Drop-in
+                                            replacement
+                                            for Authenticator...</p>
+                                        <a href="#" class="card__order">
+                                            Order
+                                            <i class="fa-regular fa-right-long ms-2"></i>
+                                        </a>
+                                        <div class="card__price">
+                                            <p class="card_product_price">€12.</p>
+                                            <span class="card_price_point">00</span>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn__square card__btn">
+                                        <i class="fa-regular fa-cart-shopping me-1"></i>
+                                    </button>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="card">
+                                    <img src="img/products/card-product4.png" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <a href="#">
+                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
+                                        </a>
+                                        <p class="card__text">A keychain attachable programmable token. Drop-in
+                                            replacement
+                                            for Authenticator...</p>
+                                        <a href="#" class="card__order">
+                                            Order
+                                            <i class="fa-regular fa-right-long ms-2"></i>
+                                        </a>
+                                        <div class="card__price">
+                                            <p class="card_product_price">€12.</p>
+                                            <span class="card_price_point">00</span>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn__square card__btn">
+                                        <i class="fa-regular fa-cart-shopping me-1"></i>
+                                    </button>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="card">
+                                    <img src="img/products/card-product4.png" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <a href="#">
+                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
+                                        </a>
+                                        <p class="card__text">A keychain attachable programmable token. Drop-in
+                                            replacement
+                                            for Authenticator...</p>
+                                        <a href="#" class="card__order">
+                                            Order
+                                            <i class="fa-regular fa-right-long ms-2"></i>
+                                        </a>
+                                        <div class="card__price">
+                                            <p class="card_product_price">€12.</p>
+                                            <span class="card_price_point">00</span>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn__square card__btn">
+                                        <i class="fa-regular fa-cart-shopping me-1"></i>
+                                    </button>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="features">
+            <div class="container">
+                <div class="main_section_header">
+                    <h3 class="main__title">Features</h3>
+                    <a href="#" class="main_see_all">See all</a>
+                </div>
+                <div class="features__boxes">
+                    <div class="features__box">
+                        <h4 class="features__title">
+                            Using hardware tokens with Azure Active Directory
+                        </h4>
+                        <p class="features__text">
+                            Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
+                            Azure Passwordless. We have solutions that work for any type of Office365/Azure
+                            subscription, with or without Premium license.
+                        </p>
+                        <button class="btn btn__square features__btn">
+                            <i class="fa-regular fa-cart-shopping me-1"></i>
+                        </button>
+                    </div>
+                    <div class="features__box">
+                        <h4 class="features__title">
+                            Using hardware tokens with Azure Active Directory
+                        </h4>
+                        <p class="features__text">
+                            Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
+                            Azure Passwordless. We have solutions that work for any type of Office365/Azure
+                            subscription, with or without Premium license.
+                        </p>
+                        <button class="btn btn__square features__btn">
+                            <i class="fa-regular fa-cart-shopping me-1"></i>
+                        </button>
+                    </div>
+                    <div class="features__box">
+                        <h4 class="features__title">
+                            Using hardware tokens with Azure Active Directory
+                        </h4>
+                        <p class="features__text">
+                            Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
+                            Azure Passwordless. We have solutions that work for any type of Office365/Azure
+                            subscription, with or without Premium license.
+                        </p>
+                        <button class="btn btn__square features__btn">
+                            <i class="fa-regular fa-cart-shopping me-1"></i>
+                        </button>
+                    </div>
+                    <div class="features__box">
+                        <h4 class="features__title">
+                            Using hardware tokens with Azure Active Directory
+                        </h4>
+                        <p class="features__text">
+                            Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
+                            Azure Passwordless. We have solutions that work for any type of Office365/Azure
+                            subscription, with or without Premium license.
+                        </p>
+                        <button class="btn btn__square features__btn">
+                            <i class="fa-regular fa-cart-shopping me-1"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="splide slider" role="group">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide"></li>
+                            <li class="splide__slide"></li>
+                            <li class="splide__slide"></li>
+                            <li class="splide__slide"></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="subscribe">
+            <div class="container">
+                <div class="subscribe__content">
+                    <h3 class="subscribe__title">
+                        Subscribe to our newsletter
+                    </h3>
+                    <p class="subscribe__text">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium.
+                    </p>
+                </div>
+                <form action="#" class="subscribe__form">
+                    <button type="submit" class="btn">Send</button>
+                </form>
             </div>
         </section>
     </main>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__about">
+                    <div class="footer__logos">
+                        <img src="img/icon/logo-white.png" alt="">
+                        <img src="img/icon/fido.png" alt="">
+                    </div>
+                    <p class="footer_about_text">
+                        Token2 is a cybersecurity company specialized in the area of multifactor authentication. Founded
+                        by a team of researchers and graduates from the University of Geneva with years of experience in
+                        the field of strong security and multifactor authentication, Token2 has invented, designed and
+                        developed various hardware and software solutions for user-friendly and secure authentication.
+                        Token2 is headquartered in Geneva, Switzerland
+                    </p>
+                </div>
+                <ul class="footer__list">
+                    <li class="footer_list_item head__item">About</li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Home</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">About us</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Services</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Solutions</a>
+                    </li>
+                </ul>
+                <ul class="footer__list">
+                    <li class="footer_list_item head__item">Information</li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Contacts</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Our team</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Blog</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">FAQ</a>
+                    </li>
+                </ul>
+                <ul class="footer__list">
+                    <li class="footer_list_item head__item">Service</li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Pages</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Elements</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Site map</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">Pricing</a>
+                    </li>
+                    <li class="footer_list_item">
+                        <a href="#" class="footer_list_link">FAQ</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__contact">
+                <div class="footer_contact_content">
+
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/js/splide.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="js/splide.js"></script>
 </body>
 
 </html>
